@@ -1,3 +1,7 @@
+2005-09-01  Pete's account  <Peter.Richardson@durham.ac.uk>
+
+	* Decay/HwDecayHandler.icc (Repository): changes to partonic decays
+
 2005-09-01  Peter Richardson  <Peter.Richardson@durham.ac.uk>
 
 	* Decay/Partonic/BtoSGammaDecayer.fh (Repository): added new partonic decayers for b to s gamma and weak partonic decays
